# fieldtrix-media-dev

./: .gitignore  AGENTS.md  IDEA.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260605_0154_0001_create_media_assets.py  20260606_0002_add_immutable_media_object_key.py  20260615_0003_make_cdn_url_nullable.py
backend/app/: __init__.py  integration.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  health.py  media.py  metrics.py
backend/app/core/: config.py  logging.py  metrics.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  media_asset.py  user.py
backend/app/repositories/: __init__.py  media_repository.py
backend/app/schemas/: auth.py  health.py  media.py
backend/app/services/: auth_service.py  media_service.py  r2_storage_service.py
backend/scripts/: dev.ps1
backend/tests/: test_metrics.py
backend/tests/api/: test_media_endpoints.py
backend/tests/services/: test_media_service.py  test_r2_storage_service.py
cloudflare/: r2-cors.dev.json
docs/: analytics-system.md  backend-observability.md  media-download-manager.md  media-sync-engine.md  media-sync-state-diagrams.md  media-upload-workflow.md  offline-playback-service.md  service-worker-architecture.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+73 files in other folders)
